# multi-provider-mcp-client

./: .gitignore  README.md  database.py  mcp_client.py  providers.py  pyproject.toml  server.py
static/: app.js  index.html  style.css
test_file/: numbers.txt  test_file.xlsx  test_two.txt
